--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.cosine.fill</groupId>
-    <artifactId>fill-word</artifactId>
+    <artifactId>cosine-word</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
